CI: consolidate the two backend tests

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -288,8 +288,7 @@ jobs:
             ctest
             ./run_tests.py -s
             cd integration_tests
-            ./run_tests.py -b llvm
-            ./run_tests.py -b c
+            ./run_tests.py -b llvm c
 
   cpython_interop:
     name: Test CPython Interop (@pythoncall)
