--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -331,7 +331,7 @@ jobs:
         shell: bash -l {0}
         run: |
             cd integration_tests
-            ./run_tests.py -b cpython_py c_py
+            ./run_tests.py -b cpython c_py
 
   sympy:
     name: Run SymPy tests
