--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -193,7 +193,7 @@ jobs:
             source $HOME/ext/emsdk/emsdk_env.sh # Activate Emscripten
             which node
             node -v
-            node src/lpython/tests/test_lpython.js
+            node --experimental-wasm-bigint src/lpython/tests/test_lpython.js
 
   test_pip_pkgs:
     name: Test PIP Installable Packages
