--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -444,6 +444,7 @@ RUN(NAME test_list_08        LABELS cpython llvm c NOFAST)
 RUN(NAME test_list_09        LABELS cpython llvm c NOFAST)
 RUN(NAME test_list_10        LABELS cpython llvm c NOFAST)
 RUN(NAME test_list_11        LABELS cpython llvm c)
+RUN(NAME test_list_12        LABELS cpython llvm c)
 RUN(NAME test_list_section   LABELS cpython llvm c NOFAST)
 RUN(NAME test_list_count     LABELS cpython llvm)
 RUN(NAME test_list_index     LABELS cpython llvm)
