--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -478,6 +478,10 @@ filename = "../integration_tests/global_syms_01.py"
 asr = true
 
 [[test]]
+filename = "../integration_tests/test_list_12.py"
+asr = true
+
+[[test]]
 filename = "cast.py"
 asr = true
 
