--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -467,6 +467,8 @@ RUN(NAME test_dict_08        LABELS cpython llvm c)
 RUN(NAME test_dict_09        LABELS cpython llvm c)
 RUN(NAME test_dict_10        LABELS cpython llvm c)
 RUN(NAME test_dict_11        LABELS cpython llvm c)
+RUN(NAME test_dict_12        LABELS cpython llvm c)
+RUN(NAME test_dict_13        LABELS cpython llvm c)
 RUN(NAME test_dict_bool      LABELS cpython llvm)
 RUN(NAME test_dict_increment LABELS cpython llvm)
 RUN(NAME test_for_loop       LABELS cpython llvm c)
