--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -455,6 +455,7 @@ RUN(NAME test_list_pop2       LABELS cpython llvm NOFAST) # TODO: Remove NOFAST 
 RUN(NAME test_tuple_01       LABELS cpython llvm c)
 RUN(NAME test_tuple_02       LABELS cpython llvm c NOFAST)
 RUN(NAME test_tuple_03       LABELS cpython llvm c)
+RUN(NAME test_tuple_04       LABELS cpython llvm c)
 RUN(NAME test_tuple_concat   LABELS cpython llvm)
 RUN(NAME test_tuple_nested   LABELS cpython llvm)
 RUN(NAME test_dict_01        LABELS cpython llvm c)
